# ubersession

./: Cargo.toml  Dockerfile  LICENSE.txt  README.md
cgi/: Makefile  cgi-wrapper.c  session_token.c  session_token.h
cgi/crypto/: crypto_api.c
src/: errors.rs  host_restrictions.rs  keypair.rs  main.rs  server.rs  session_token.rs  wire.rs
src/cli/: generate_key.rs  get_public_key.rs  mod.rs  serve.rs
src/serde/: base64.rs  mod.rs  public_key.rs  signature.rs  signing_key.rs
ubersession/: Cargo.toml  README.md
ubersession/src/: host_name_and_port.rs  html.rs  main.rs  server.rs
ubersession/src/cli/: get_public_key.rs  mod.rs  serve.rs
ubersession/src/serde/: signature.rs  signing_key.rs
ubersession_axum/: Cargo.toml
ubersession_axum/src/: adapt.rs  lib.rs
ubersession_core/: Cargo.toml
ubersession_core/src/: cookie.rs  header_string.rs  host_name.rs  http_errors.rs  lib.rs  path_prefix.rs  protocol.rs  session_token.rs  uri.rs
ubersession_core/src/serde/: base64.rs
ubersession_server/: Cargo.toml
ubersession_server/src/: errors.rs  lib.rs  server.rs
