[package]
name = 'ubersession'
version = '0.1.0'
authors = ['William Demchick <william.demchick@gmail.com>']
edition = '2024'
description = 'A simple mechanism for cross-domain WWW session establishment'

[dependencies.anyhow]
version = '1.0.98'

[dependencies.axum]
version = '0.8.3'

[dependencies.borsh]
version = '1.5.7'
features = ['derive']

[dependencies.chrono]
version = '0.4.40'

[dependencies.clap]
version = '4.5.37'
features = ['derive']

[dependencies.data-encoding]
version = '2.9.0'

[dependencies.ed25519]
version = '2.2.3'

[dependencies.ed25519-dalek]
version = '2.1.1'
features = ['pem', 'rand_core']

[dependencies.tokio]
version = '1.44.2'
features = ['full']

[dependencies.uuid]
version = '1.16.0'
features = ['borsh']

